--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 <h1>Welcome to Wissen Demo<h1>
+  
+  <a href="url">Home</a>
+  <a href="url">About</a>
+  <a href="url">Services</a>
+  <a href="url">Netbanking</a>
+  <a href="url">Contact Us</a>
