--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Welcome to Wissen Demo<h1>
   
- <h4> <a href="url">Home</a>
+ <h4> <a href="https://pujakhandelwal.github.io/demoWissen/Home.html">Home</a>
   <a href="url">About</a>
   <a href="url">Services</a>
   <a href="url">Netbanking</a>
