--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>Welcome to Wissen Demo<h1>
   
  <h4> <a href="https://pujakhandelwal.github.io/demoWissen/Home.html">Home</a>
-  <a href="url">About</a>
-  <a href="url">Services</a>
-  <a href="url">Netbanking</a>
-  <a href="url">Contact Us</a><h4>
+  <a href="https://pujakhandelwal.github.io/demoWissen/about.html">About</a>
+  <a href="https://pujakhandelwal.github.io/demoWissen/services.html">Services</a>
+  <a href="https://pujakhandelwal.github.io/demoWissen/netbanking.html">Netbanking</a>
+  <a href="https://pujakhandelwal.github.io/demoWissen/contact.html">Contact Us</a><h4>
