--- a/services.html
+++ b/services.html
@@ -4,18 +4,19 @@
   <div>
     <label for="uname"><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="uname" required>
+    <br>
 
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
-
+  <br>
     <button type="submit">Login</button>
     <label>
-      <input type="checkbox" checked="checked" name="remember"> Remember me
+      <input type="checkbox" checked="checked" name="remember"><h5> Remember me<h5>
     </label>
   </div>
-
+<br>
   <div>
-    <button type="button" class="cancelbtn">Cancel</button>
+   
     <span class="psw">Forgot <a href="#">password?</a></span>
   </div>
 </form>
