--- a/services.html
+++ b/services.html
@@ -2,19 +2,18 @@
   
   <form action="url" method="post">
   <div>
-    <label for="uname"><b>Username</b></label>
+    <label for="uname"><h4>Username</h4></label>
     <input type="text" placeholder="Enter Username" name="uname" required>
     <br>
     <br>
 
-    <label for="psw"><b>Password</b></label>
+    <label for="psw"><h4>Password</h4></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
   <br>
-    <br>
     <button type="submit">Login</button>
-    
   </div>
+    <br>
   <div>
-    <span class="psw">Forgot <a href="#">password?</a></span>
+    <h4><span class="psw">Forgot <a href="#">password?</a></span><h4>
   </div>
 </form>
