--- a/services.html
+++ b/services.html
@@ -2,18 +2,19 @@
   
   <form action="url" method="post">
   <div>
-    <label for="uname"><h4>Username</h4></label>
+    <label for="uname">Username</label>
     <input type="text" placeholder="Enter Username" name="uname" required>
     <br>
     <br>
 
-    <label for="psw"><h4>Password</h4></label>
+    <label for="psw">Password</label>
     <input type="password" placeholder="Enter Password" name="psw" required>
   <br>
     <button type="submit">Login</button>
+    <button type="submit" onclick = "url" >Register</button>
   </div>
     <br>
   <div>
-    <h4><span class="psw">Forgot <a href="#">password?</a></span><h4>
+    <span class="psw"><h4>Forgot<h4> <a href="#"><h4>password?<h4></a></span>
   </div>
 </form>
