--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
     <input type="password" placeholder="Enter Password" name="psw" required>
   <br>
     <button type="submit">Login</button>
-    <button type="submit" onclick = "url" >Register</button>
+    <button type="submit" onclick = onclick="location.href = 'www.yoursite.com';" >Register</button>
   </div>
     <br>
   <div>
