--- a/register.html
+++ b/register.html
@@ -17,7 +17,7 @@
     <button type="submit" class="registerbtn">Register</button>
   </div>
 
-  <div class="container signin">
-    <p>Already have an account? <a href="#">Sign in</a>.</p>
+  <div >
+    <p>Already have an account? <a href="https://pujakhandelwal.github.io/demoWissen/services.html">Sign in</a>.</p>
   </div>
 </form>
