--- a/services.html
+++ b/services.html
@@ -11,10 +11,10 @@
     <input type="password" placeholder="Enter Password" name="psw" required>
   <br>
     <button type="submit">Login</button>
-    <button type="submit" onclick = onclick="location.href = 'www.yoursite.com';" >Register</button>
+    
   </div>
     <br>
-  <div>
-    <span class="psw"><h4>Forgot<h4> <a href="#"><h4>password?<h4></a></span>
+ <div >
+    <p>Don't have an account? <a href="https://pujakhandelwal.github.io/demoWissen/register.html">Register</a>.</p>
   </div>
 </form>
