--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
     <br>
 
     <label for="psw">Password</label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" placeholder="Enter Password please" name="psw" required>
   <br>
     <button type="submit">Login</button>
     
