--- a/services.html
+++ b/services.html
@@ -3,12 +3,12 @@
   <form action="url" method="post">
   <div>
     <label for="uname">Username</label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+    <input type="text" placeholder="PLease Enter Username" name="uname" required>
     <br>
     <br>
 
     <label for="psw">Password</label>
-    <input type="password" placeholder="Enter Password please" name="psw" required>
+    <input type="password" placeholder="Enter Password" name="psw" required>
   <br>
     <button type="submit">Login</button>
     
