--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
   <form action="url" method="post">
   <div>
     <label for="uname">Username</label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
+    <input type="text" placeholder="Enter UserName" name="uname" required>
     <br>
     <br>
 
