--- a/services.html
+++ b/services.html
@@ -2,7 +2,7 @@
   
   <form action="url" method="post">
   <div>
-    <label for="uname">Username</label>
+    <label for="uname">UserName</label>
 
     <input type="text" placeholder="Enter UserName" name="uname" required>
 
